<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff5f5f5"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="30.0dip"
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip"
    android:paddingTop="30.0dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_input_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/username"
            style="@style/input_style2"
            android:hint="@string/alertPhone"
            android:inputType="number"
            android:maxLength="11" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/account_input_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/yanzhenid"
            style="@style/input_style2"
            android:hint="@string/alertCode"
            android:inputType="number"
            android:maxLength="6" />

        <View style="@style/var_spe_line_style" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/qinqiuyanzhen"
                android:layout_width="100.0dip"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/getCode"

                android:textSize="15.0sp" />


        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/account_input_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email"
            style="@style/input_style2"
            android:hint="输入邮箱"
            android:inputType="textEmailAddress"
            android:maxLength="30" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/account_input_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@id/password"
            style="@style/input_style2"
            android:hint="@string/alertPassword"
            android:inputType="textPassword"
            android:maxLength="20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/account_input_shape"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password2"
            style="@style/input_style2"
            android:hint="@string/alertPasswordOk"
            android:inputType="textPassword"
            android:maxLength="20" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="35.0dip"
        android:background="@drawable/bg_login_button"
        android:text="@string/register"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/register_protocol"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="20.0dip"
        android:text="@string/protocol" />
</LinearLayout>